# drf_web_api

./: .pre-commit-config.yaml  README.md  db.sqlite3  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py
accounts/migrations/: 0001_initial.py
posts/: models.py  permissions.py  serializers.py  tests.py  urls.py
posts/migrations/: 0001_initial.py
web_api/: asgi.py  settings.py  urls.py  wsgi.py
